--- a/src/app/no-burnout/no-burnout.component.css
+++ b/src/app/no-burnout/no-burnout.component.css
@@ -1,5 +1,6 @@
 .spacing {
     margin-bottom: 36px;
+    padding-top: 64px;
 }
 
 .center { 
@@ -120,6 +121,10 @@ img {
         height: 860px;
     }
 
+    .spacing {
+        padding-top: 64px;
+    }
+
     .title {
         width: 415px;
         height: 60px;
@@ -164,6 +169,10 @@ img {
         left: 60px;
         top: 380px;
     }
+
+    .spacing {
+        margin-bottom: 36px;
+    }
 }
 
 @media only screen and (max-width: 600px) {
@@ -191,7 +200,7 @@ img {
         width: 139px;
         height: 30px;
         left: 105px;
-        top: 235px
+        top: 215px
     }
 
     .clock {
@@ -202,7 +211,7 @@ img {
 
     .handshake {
         height: 36px;
-        top: 229px;
+        top: 209px;
         left: 57px;
     }
 
@@ -210,6 +219,11 @@ img {
         width: 300px;
         height: 320px;
         left: 0;
-        top: 289px;
+        top: 259px;
+    }
+
+    .spacing {
+        margin-bottom: 0px;
+        padding-top: 38px;
     }
 }
